--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
 <head>
 	<meta charset="utf-8"/>
-	<link rel="stylesheet" href="css/projeto1_home.css" media="all">
-	<link rel="icon" href="icones/favicon.png">
+	<link rel="stylesheet" href="css/index.css" media="all">
+	<link rel="icon" href="icons/favicon.png">
 	<title>|| Projeto-1 || Home</title>
 </head>
 
@@ -14,11 +14,11 @@
 	<h1>Projeto I</h1>
 	<nav id="menu">
 		<ul>
-			<li><a href="projeto1_home.html">Inicio</a></li>
-			<li><a href="projeto1_musicas.html" id="decks">Músicas</a></li>
-			<li><a href="projeto1_videos.html">Vídeos</a></li>
-			<li><a href="projeto1_formulario.html">Formulário</a></li>
-			<li><a href="projeto1_sobre.html">Sobre</a></li>
+			<li><a href="index.html">Inicio</a></li>
+			<li><a href="musics.html" id="decks">Músicas</a></li>
+			<li><a href="videos.html">Vídeos</a></li>
+			<li><a href="form.html">Formulário</a></li>
+			<li><a href="sobre.html">Sobre</a></li>
 		</ul>
 	</nav>
 	</header>
@@ -32,7 +32,7 @@
 			<li>Item4</li>
 			<li>Item5</li>
 		</ol>
-		<img src="imagens/guardragon.png" width="150px" alt="hoje não"/>
+		<img src="images/guardragon.png" width="150px" alt="hoje não"/>
 		</div>
 	</article>
 	<aside>
@@ -54,7 +54,7 @@
 			<p>Fusce non venenatis erat, non congue velit. In pellentesque velit in erat finibus, cursus imperdiet elit bibendum. Nullam iaculis nulla et arcu iaculis, nec pulvinar elit porta. Fusce condimentum ipsum in vulputate rhoncus. Nullam sed commodo nisi. Curabitur faucibus tincidunt quam, vitae interdum erat porttitor vitae. Aliquam purus metus, efficitur nec varius ultricies, venenatis nec velit. Sed consectetur cursus augue, in iaculis nibh hendrerit vel.</p>
 			<br />
 			<p>Nunc nisi lacus, placerat at cursus vitae, sollicitudin id dolor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris condimentum sit amet tellus quis pretium. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent nec nisl velit. Sed ipsum neque, finibus sit amet est a, cursus bibendum erat. Curabitur tincidunt dictum magna, vel tincidunt neque efficitur ac. Nunc sed ligula ut purus facilisis maximus sed eget sapien. Quisque laoreet, odio ut semper pellentesque, dui erat finibus sapien, eget sollicitudin ligula ante et sem. Donec facilisis, massa at interdum scelerisque, erat metus finibus mi, sit amet tempus ligula diam vel ipsum. Etiam tempus imperdiet tristique. Quisque eros lectus, congue a blandit eget, molestie vitae ipsum. Aliquam sodales, lacus non dictum mollis, nisl erat sollicitudin turpis, nec finibus augue neque nec odio. Nullam posuere metus libero, eget elementum nunc posuere sed. Aenean tempor ex lorem, sed vehicula diam imperdiet in.</p>
-			<img id="stargrail" src="imagens/stargrail.jpg" width="700px" alt="hoje não"/>
+			<img id="stargrail" src="images/stargrail.jpg" width="700px" alt="hoje não"/>
 			
 			<table id="tab1">
 				<caption>Tier List</caption>
