edit final madruga

--- a/formulario.html
+++ b/formulario.html
@@ -4,8 +4,8 @@
 
 <head>
 	<meta charset="utf-8"/>
-	<link rel="stylesheet" href="css/projeto1_formularios.css" media="all">
-	<link rel="icon" href="icones/favicon.png">
+	<link rel="stylesheet" href="css/formularios.css" media="all">
+	<link rel="icon" href="icons/favicon.png">
 	<title>|| Projeto-1 || Formulário</title>
 </head>
 
@@ -14,11 +14,11 @@
 	<h1>Projeto I</h1>
 	<nav id="menu">
 		<ul>
-			<li><a href="projeto1_home.html">Inicio</a></li>
-			<li><a href="projeto1_musicas.html" id="decks">Músicas</a></li>
-			<li><a href="projeto1_videos.html">Vídeos</a></li>
-			<li><a href="projeto1_formulario.html">Formulário</a></li>
-			<li><a href="projeto1_sobre.html">Sobre</a></li>
+			<li><a href="index.html">Inicio</a></li>
+			<li><a href="musicas.html" id="decks">Músicas</a></li>
+			<li><a href="videos.html">Vídeos</a></li>
+			<li><a href="formulario.html">Formulário</a></li>
+			<li><a href="sobre.html">Sobre</a></li>
 		</ul>
 	</nav>
 	</header>
@@ -31,11 +31,11 @@
 			<li>Item4</li>
 			<li>Item5</li>
 		</ol>
-		<img src="imagens/guardragon.png" width="150px" alt="hoje não"/>
+		<img src="images/guardragon.png" width="150px" alt="hoje não"/>
 	</article>
 	<aside>
 		Tutorial
-		<img src="imagens/lee.png" width="150px" height="150px" alt="hoje não"/>
+		<img src="images/lee.png" width="150px" height="150px" alt="hoje não"/>
 	</aside>
 	<section>
 		<div id="conteudo">
