--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	<nav id="menu">
 		<ul>
 			<li><a href="index.html">Inicio</a></li>
-			<li><a href="musics.html" id="decks">Músicas</a></li>
+			<li><a href="musicas.html" id="decks">Músicas</a></li>
 			<li><a href="videos.html">Vídeos</a></li>
-			<li><a href="form.html">Formulário</a></li>
+			<li><a href="formulario.html">Formulário</a></li>
 			<li><a href="sobre.html">Sobre</a></li>
 		</ul>
 	</nav>
