modificações na página sobre, adição de links, edição css, correção imagens

--- a/musicas.html
+++ b/musicas.html
@@ -42,18 +42,11 @@
 			<embed class="som" src="musics/lavender.mp3" hidden="" type=""/>
 			<br />
 			<br />
-			<embed class="som" src="musics/greenhill.mp3" hidden="" type=""/>
-			<br />
-			<br />
-			<embed class="som" src="musics/supermario.mp3" hidden="" type=""/>
-			<br />
-			<br />
-			<embed class="som" src="musics/pacman.mp3" hidden="" type=""/>
-			<br />
-			<br />
-			<embed class="som" src="musics/tank.mp3" autoplay="false" hidden="" type=""/>
-			<br />
-			<br />
+            <audio controls>
+            <source src="lavender.mp3" type="audio/mpeg">
+            <source src="horse.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+            </audio>
 		</div>
 	</section>
 	<footer>
