--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	<header>
-	<h1>Projeto I</h1>
+	<h1><div><span style="color:#ff0000;">P</span><span style="color:#ff4000;">r</span><span style="color:#ff7f00;">o</span><span style="color:#ffff00;">j</span><span style="color:#80ff00;">e</span><span style="color:#00ff00;">t</span><span style="color:#00ffff;">o</span><span style="color:#0080ff;"> </span><span style="color:#0000ff;">I</span></div></h1>
 	<nav id="menu">
 		<ul>
 			<li><a href="index.html">Inicio</a></li>
