--- a/android.html
+++ b/android.html
@@ -23,7 +23,7 @@
                 <div class="dropdown-content">
                     <a href="#">CSS</a>
                     <a href="#">JavaScript</a>
-                    <a href="php.html">PHP</a>
+                    <a href="#">PHP</a>
                     <a href="#">Bootstrap</a>
                     <a href="#">AngularJS</a>
                     <a href="https://aspnetboilerplate.com/">ASP.NET Boilerplate</a>
