--- a/contato.html
+++ b/contato.html
@@ -56,7 +56,7 @@
 			<p><label for="nome">Nome:</label>
 				<input type="text" name="nome" id="nome" size="40" autofocus required/>
 			
-			<label for="idade">Idade:</label>
+			<label style="color: aliceblue" for="idade">Idade:</label>
 				<input type="text" name="idade" id="idade" size="10" required/>
 			</p>
 			<p><label for="email">Email:</label>
