--- a/boilerplate.html
+++ b/boilerplate.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="utf-8"/>
-	<link rel="stylesheet" href="css/android.css" media="all">
+	<link rel="stylesheet" href="css/php.css" media="all">
 	<link rel="icon" href="favicon.png">
 	<title>|| Projeto X || Início</title>
 </head>
@@ -55,15 +55,12 @@
 	</aside>
         
 	<section>
-		<div id="conteudo">
-			<h2>SQLite</h2>
+		<div id="conteudo">  
+            <h2>Fonts</h2>
 			<br />
-            SQLite is a self-contained, high-reliability, embedded, full-featured, public-domain, SQL database engine. SQLite is the most used database engine in the world.
-            <br/>
-            <br/>
-            <a id="info" href="https://www.tutorialspoint.com/sqlite/index.htm">SQLite Tutorial</a>
+            <a id="info" href="https://fontawesome.com/">SQLite Tutorial</a>
 			<br />
-            <a id="info" href="http://www.sqlitetutorial.net/">SQLite Tutorial - An Easy Way to Master SQLite Fast</a>        
+            <a id="info" href="">SQLite Tutorial - An Easy Way to Master SQLite Fast</a>  
 		</div>
 	</section>
 	<footer>
