--- a/bootstrap.html
+++ b/bootstrap.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="utf-8"/>
-	<link rel="stylesheet" href="css/android.css" media="all">
+	<link rel="stylesheet" href="css/bootstrap.css" media="all">
 	<link rel="icon" href="favicon.png">
 	<title>|| Projeto X || Início</title>
 </head>
@@ -56,14 +56,20 @@
         
 	<section>
 		<div id="conteudo">
-			<h2>SQLite</h2>
-			<br />
-            SQLite is a self-contained, high-reliability, embedded, full-featured, public-domain, SQL database engine. SQLite is the most used database engine in the world.
+			<h2>Bootstrap (framework front-end)</h2>
+			<br/>    
+			<a id="info" href="http://globocom.github.io/bootstrap/">Globo.com Bootstrap</a>
             <br/>
+            <a id="info" href="http://getbootstrap.com.br/">Bootstrap em Português</a>
+            <br/>    
             <br/>
-            <a id="info" href="https://www.tutorialspoint.com/sqlite/index.htm">SQLite Tutorial</a>
-			<br />
-            <a id="info" href="http://www.sqlitetutorial.net/">SQLite Tutorial - An Easy Way to Master SQLite Fast</a>        
+            <p>
+            Bootstrap é um framework web com código-fonte aberto para desenvolvimento de componentes de interface e front-end para sites e aplicações web usando HTML, CSS e JavaScript, baseado em modelos de design para a tipografia, melhorando a experiência do usuário em um site amigável e responsivo.
+            </p>
+            <br/>
+            <p>
+            O Bootstrap é um dos projetos mais bem avaliado no site GitHub, com mais de 111 600 estrelas e 51 500 forks.
+            </p>   
 		</div>
 	</section>
 	<footer>
