--- a/index.html
+++ b/index.html
@@ -15,21 +15,23 @@
 	<nav id="menu">
 		<ul>
             <li><a href="index.html">Início</a></li>
-			<li><a href="fun.html">Fun</a></li>
-            <li><a href="tabelas.html">Tabelas</a></li>
             <li><a href="android.html">Android</a></li>
             <li class="dropdown">
                 <a href="javascript:void(0)" class="dropbtn">Web Dev</a>
                 <div class="dropdown-content">
-                    <a href="#">CSS</a>
-                    <a href="#">JavaScript</a>
+                    <a href="https://www.hostinger.com.br/tutoriais/o-que-e-css-guia-basico-de-css/">CSS</a>
+                    <a href="javascript.html">JavaScript</a>
                     <a href="php.html">PHP</a>
-                    <a href="#">Bootstrap</a>
+                    <a href="bootstrap.html">Bootstrap</a>
                     <a href="#">AngularJS</a>
-                    <a href="https://aspnetboilerplate.com/">ASP.NET Boilerplate</a>
+                    <a href="https://www.asp.net/">ASP.NET</a>
+                    <a href="boilerplate.html">ASP.NET Boilerplate</a>
                 </div>
             </li>
+            <li><a href="fun.html">Fun</a></li>
+            <li><a href="tabelas.html">Tabelas</a></li>
             <li><a href="contato.html">Contato</a></li>
+            <li><a href="modal.html">Modal</a></li>
             <li><a href="vip.html">VIP</a></li>
 		</ul>
 	</nav>
@@ -120,12 +122,24 @@
             <br/>
             Tutoriais:
             <br/>    
-			<a id="info" href=https://developer.mozilla.org/pt-BR/docs/Aprender/Getting_started_with_the_web/Publicando_seu_site>https://developer.mozilla.org/pt-BR/docs/Aprender/Getting_started_with_the_web/Publicando_seu_site</a>
+			<a id="info" href=https://developer.mozilla.org/pt-BR/docs/Aprender/Getting_started_with_the_web/Publicando_seu_site>Publicando seu site</a>
             <br/>
             <a id="info" href=https://gist.github.com/leocomelli/2545add34e4fec21ec16>Lista de comandos úteis do GIT</a>
             <br/>    
             <br/>
-               
+            Udacity:
+            <br/>    
+			<a id="info" href="https://br.udacity.com/course/new-android-fundamentals--ud851">Desenvolvimento de aplicativos Android</a>
+            <br/>
+            <a id="info" href="https://br.udacity.com/course/android-basics-user-interface--ud834">Android Basics: User Interface</a>
+            <br/>
+            <a id="info" href="https://br.udacity.com/course/java-programming-basics--ud282">Java Programming Basics</a>
+            <br/>
+            <a id="info" href="https://br.udacity.com/course/how-to-use-git-and-github--ud775">Como usar o Git e o GitHub</a>
+            <br/>
+            <a id="info" href="https://br.udacity.com/course/intro-to-html-and-css--ud304">Introdução ao HTML e CSS</a>
+            <br/>    
+            <br/>   
 			Para mais informações acesse: <a id="info" href="https://www.w3schools.com/">https://www.w3schools.com/</a> (HTML, CSS, JavaScript, Bootstrap 3, PHP, AngularJS) 
             <br />     
                 
