--- a/php.html
+++ b/php.html
@@ -15,21 +15,23 @@
 	<nav id="menu">
 		<ul>
             <li><a href="index.html">Início</a></li>
-			<li><a href="fun.html">Fun</a></li>
-            <li><a href="tabelas.html">Tabelas</a></li>
             <li><a href="android.html">Android</a></li>
             <li class="dropdown">
                 <a href="javascript:void(0)" class="dropbtn">Web Dev</a>
                 <div class="dropdown-content">
-                    <a href="#">CSS</a>
-                    <a href="#">JavaScript</a>
-                    <a href="#">PHP</a>
-                    <a href="#">Bootstrap</a>
+                    <a href="https://www.hostinger.com.br/tutoriais/o-que-e-css-guia-basico-de-css/">CSS</a>
+                    <a href="javascript.html">JavaScript</a>
+                    <a href="php.html">PHP</a>
+                    <a href="bootstrap.html">Bootstrap</a>
                     <a href="#">AngularJS</a>
-                    <a href="https://aspnetboilerplate.com/">ASP.NET Boilerplate</a>
+                    <a href="https://www.asp.net/">ASP.NET</a>
+                    <a href="boilerplate.html">ASP.NET Boilerplate</a>
                 </div>
             </li>
+            <li><a href="fun.html">Fun</a></li>
+            <li><a href="tabelas.html">Tabelas</a></li>
             <li><a href="contato.html">Contato</a></li>
+            <li><a href="modal.html">Modal</a></li>
             <li><a href="vip.html">VIP</a></li>
 		</ul>
 	</nav>
