alteraçoes pagina vip

--- a/boilerplate.html
+++ b/boilerplate.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="utf-8"/>
-	<link rel="stylesheet" href="css/php.css" media="all">
+	<link rel="stylesheet" href="css/boilerplate.css" media="all">
 	<link rel="icon" href="favicon.png">
 	<title>|| Projeto X || Início</title>
 </head>
@@ -58,9 +58,9 @@
 		<div id="conteudo">  
             <h2>Fonts</h2>
 			<br />
-            <a id="info" href="https://fontawesome.com/">SQLite Tutorial</a>
+            <a id="info" href="https://fontawesome.com/">Font Awesome</a>
 			<br />
-            <a id="info" href="">SQLite Tutorial - An Easy Way to Master SQLite Fast</a>  
+            <a id="info" href=""></a>  
 		</div>
 	</section>
 	<footer>
