--- a/fun.html
+++ b/fun.html
@@ -53,7 +53,7 @@
 	</aside>
 	<section>
 		<div id="conteudo">
-			<embed src="videos/fategofunny.webm" hidden="" type="" width="400" height="400"/>
+			<embed src="media/fategofunny.webm" hidden="" type="" width="400" height="400"/>
 			<br />
 			<br />
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/tzJJBE0SYS0" frameborder="0" allowfullscreen></iframe>
