--- a/javascript.html
+++ b/javascript.html
@@ -4,8 +4,7 @@
 
 <head>
 	<meta charset="utf-8"/>
-	<link rel="stylesheet" href="css/index.css" media="all">
-    <link rel="stylesheet" href="css/modal.css" media="all">
+	<link rel="stylesheet" href="css/php.css" media="all">
 	<link rel="icon" href="favicon.png">
 	<title>|| Projeto X || Início</title>
 </head>
@@ -53,44 +52,24 @@
 		Tutorial
 		<img src="images/gakkou gurashi.jpg" width="200px" alt="hoje não"/>
         <img src="images/furry.jpg" width="200px" alt="hoje não"/>
-	</aside>       
+	</aside>
+        
 	<section>
-		<div id="conteudo">    
-            <h2>Modal Login Form</h2>
-            <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
-
-            <div id="id01" class="modal">
-
-              <form class="modal-content animate" action="/action_page.php">
-                <div class="imgcontainer">
-                  <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-                  <img src="images/kunagisa.png" alt="Avatar" class="avatar">
-                </div>
-
-                <div class="container">
-                  <label for="uname"><b>Username</b></label>
-                  <input type="text" placeholder="Enter Username" name="uname" required>
-                  <label for="psw"><b>Password</b></label>
-                  <input type="password" placeholder="Enter Password" name="psw" required>
-                  <button type="submit">Login</button>
-                  <label>
-                    <input type="checkbox" checked="checked" name="remember"> Lembrar
-                  </label>
-                </div>
-                <div class="container" style="background-color:#f1f1f1">
-                  <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancelar</button>
-                  <span class="psw">Forgot <a href="#">password?</a></span>
-                </div>
-              </form>
-            </div>            
-		</div>        
+		<div id="conteudo">  
+            <h2>Fonts</h2>
+			<br />
+            <a id="info" href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript/A_re-introduction_to_JavaScript">Tutorial de JS</a>
+			<br />
+            <a id="info" href="https://javascript.info/">The Modern Javascript Tutorial</a> 
+            <br />
+            <a id="info" href="http://www.javascript-tutorial.com.br/index.html">Aprenda Javascript</a>
+		</div>
 	</section>
 	<footer>
 		<p align="right" style="color:red">Desenvolvido por João, 2017.
 		<a href="#" target="_top">topo</a>
 		</p>
 	</footer>
-    <script type="text/javascript" src="js/teste.js"></script>
 </body>
 
 </html>
