--- a/vip.html
+++ b/vip.html
@@ -16,21 +16,23 @@
 	<nav id="menu">
 		<ul>
             <li><a href="index.html">Início</a></li>
-			<li><a href="fun.html">Fun</a></li>
-            <li><a href="tabelas.html">Tabelas</a></li>
             <li><a href="android.html">Android</a></li>
             <li class="dropdown">
                 <a href="javascript:void(0)" class="dropbtn">Web Dev</a>
                 <div class="dropdown-content">
-                    <a href="#">CSS</a>
-                    <a href="#">JavaScript</a>
-                    <a href="#">PHP</a>
-                    <a href="#">Bootstrap</a>
+                    <a href="https://www.hostinger.com.br/tutoriais/o-que-e-css-guia-basico-de-css/">CSS</a>
+                    <a href="javascript.html">JavaScript</a>
+                    <a href="php.html">PHP</a>
+                    <a href="bootstrap.html">Bootstrap</a>
                     <a href="#">AngularJS</a>
-                    <a href="https://aspnetboilerplate.com/">ASP.NET Boilerplate</a>
+                    <a href="https://www.asp.net/">ASP.NET</a>
+                    <a href="boilerplate.html">ASP.NET Boilerplate</a>
                 </div>
             </li>
+            <li><a href="fun.html">Fun</a></li>
+            <li><a href="tabelas.html">Tabelas</a></li>
             <li><a href="contato.html">Contato</a></li>
+            <li><a href="modal.html">Modal</a></li>
             <li><a href="vip.html">VIP</a></li>
 		</ul>
 	</nav>
@@ -54,33 +56,16 @@
 	</aside>       
 	<section>
 		<div id="conteudo">    
-            <h2>Modal Login Form</h2>
-            <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
-
-            <div id="id01" class="modal">
-
-              <form class="modal-content animate" action="/action_page.php">
-                <div class="imgcontainer">
-                  <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-                  <img src="images/kunagisa.png" alt="Avatar" class="avatar">
-                </div>
-
-                <div class="container">
-                  <label for="uname"><b>Username</b></label>
-                  <input type="text" placeholder="Enter Username" name="uname" required>
-                  <label for="psw"><b>Password</b></label>
-                  <input type="password" placeholder="Enter Password" name="psw" required>
-                  <button type="submit">Login</button>
+            <img id="stargrail" src="images/gochumon.png" alt="hoje não"/>
+            <br/>
+                  <label style="width: 200px" for="uname"><b>Username</b></label>
+                  <input style="width: 200px" type="text" placeholder="Enter Username" name="uname" required>
+                  <label style="width: 200px" for="psw"><b>Password</b></label>
+                  <input style="width: 200px" type="password" placeholder="Enter Password" name="psw" required>
+                  <button style="width: 200px" type="submit">Login</button>
                   <label>
                     <input type="checkbox" checked="checked" name="remember"> Lembrar
-                  </label>
-                </div>
-                <div class="container" style="background-color:#f1f1f1">
-                  <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancelar</button>
-                  <span class="psw">Forgot <a href="#">password?</a></span>
-                </div>
-              </form>
-            </div>            
+                  </label>                         
 		</div>        
 	</section>
 	<footer>
