--- a/vip.html
+++ b/vip.html
@@ -65,8 +65,10 @@
                   <button style="width: 200px" type="submit">Login</button>
                   <label>
                     <input type="checkbox" checked="checked" name="remember"> Lembrar
-                  </label>                         
-		</div>        
+                  </label> 
+            
+		</div>   
+        coe
 	</section>
 	<footer>
 		<p align="right" style="color:red">Desenvolvido por João, 2017.
