--- a/angularjs.html
+++ b/angularjs.html
@@ -4,9 +4,9 @@
 
 <head>
 	<meta charset="utf-8"/>
-	<link rel="stylesheet" href="css/fun.css" media="all">
+	<link rel="stylesheet" href="css/angularjs.css" media="all">
 	<link rel="icon" href="favicon.png">
-	<title>|| Projeto X || Fun</title>
+	<title>|| Projeto X || AngularJS</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
 	<h1><div><span style="color:#ff0000;">P</span><span style="color:#ff4000;">r</span><span style="color:#ff7f00;">o</span><span style="color:#ffff00;">j</span><span style="color:#80ff00;">e</span><span style="color:#00ff00;">t</span><span style="color:#00ffff;">o</span><span style="color:#0080ff;"> </span><span style="color:#0000ff;">X</span></div></h1>
 	<nav id="menu">
 		<ul>
-            <li><a href="index.html">Início</a></li>
+            <li><a href="home.html">Início</a></li>
             <li><a href="android.html">Android</a></li>
             <li class="dropdown">
                 <a href="javascript:void(0)" class="dropbtn">Web Dev</a>
@@ -23,16 +23,12 @@
                     <a href="javascript.html">JavaScript</a>
                     <a href="php.html">PHP</a>
                     <a href="bootstrap.html">Bootstrap</a>
-                    <a href="#">AngularJS</a>
+                    <a href="angularjs.html">AngularJS</a>
                     <a href="https://www.asp.net/">ASP.NET</a>
                     <a href="boilerplate.html">ASP.NET Boilerplate</a>
                 </div>
             </li>
-            <li><a href="fun.html">Fun</a></li>
-            <li><a href="tabelas.html">Tabelas</a></li>
-            <li><a href="contato.html">Contato</a></li>
-            <li><a href="modal.html">Modal</a></li>
-            <li><a href="vip.html">VIP</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
 		</ul>
 	</nav>
 	</header>
@@ -45,23 +41,22 @@
 			<li>Item4</li>
 			<li>Item5</li>
 		</ol>
-		<img src="images/guardragon.png" width="150px" alt="hoje não"/>
+		<img src="img/guardragon.png" width="200px" alt="hoje não"/>
+        <img src="img/c2.jpg" width="200px" alt="hoje não"/>
 	</article>
 	<aside>
 		Tutorial
-		<img src="images/lee.png" width="150px" height="150px" alt="hoje não"/>
+		<img src="img/gakkou gurashi.jpg" width="200px" alt="hoje não"/>
+        <img src="img/furry.jpg" width="200px" alt="hoje não"/>
 	</aside>
+        
 	<section>
-		<div id="conteudo">
-			<embed src="media/fategofunny.webm" hidden="" type="" width="400" height="400"/>
+		<div id="conteudo">  
+            <h2>Fonts</h2>
 			<br />
+            <a id="info" href="https://fontawesome.com/">Font Awesome</a>
 			<br />
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/tzJJBE0SYS0" frameborder="0" allowfullscreen></iframe>
-			<br />
-			<br />
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/gjYE_YzdRlI" frameborder="0" allowfullscreen></iframe>
-			<br />
-			<br />
+            <a id="info" href=""></a>  
 		</div>
 	</section>
 	<footer>
