--- a/home.html
+++ b/home.html
@@ -4,8 +4,7 @@
 
 <head>
 	<meta charset="utf-8"/>
-	<link rel="stylesheet" href="css/index.css" media="all">
-    <link rel="stylesheet" href="css/modal.css" media="all">
+	<link rel="stylesheet" href="css/home.css" media="all">
 	<link rel="icon" href="favicon.png">
 	<title>|| Projeto X || Início</title>
 </head>
@@ -15,7 +14,7 @@
 	<h1><div><span style="color:#ff0000;">P</span><span style="color:#ff4000;">r</span><span style="color:#ff7f00;">o</span><span style="color:#ffff00;">j</span><span style="color:#80ff00;">e</span><span style="color:#00ff00;">t</span><span style="color:#00ffff;">o</span><span style="color:#0080ff;"> </span><span style="color:#0000ff;">X</span></div></h1>
 	<nav id="menu">
 		<ul>
-            <li><a href="index.html">Início</a></li>
+            <li><a href="home.html">Início</a></li>
             <li><a href="android.html">Android</a></li>
             <li class="dropdown">
                 <a href="javascript:void(0)" class="dropbtn">Web Dev</a>
@@ -24,16 +23,12 @@
                     <a href="javascript.html">JavaScript</a>
                     <a href="php.html">PHP</a>
                     <a href="bootstrap.html">Bootstrap</a>
-                    <a href="#">AngularJS</a>
+                    <a href="angularjs.html">AngularJS</a>
                     <a href="https://www.asp.net/">ASP.NET</a>
                     <a href="boilerplate.html">ASP.NET Boilerplate</a>
                 </div>
             </li>
-            <li><a href="fun.html">Fun</a></li>
-            <li><a href="tabelas.html">Tabelas</a></li>
-            <li><a href="contato.html">Contato</a></li>
-            <li><a href="modal.html">Modal</a></li>
-            <li><a href="vip.html">VIP</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
 		</ul>
 	</nav>
 	</header>
@@ -46,27 +41,17 @@
 			<li>Item4</li>
 			<li>Item5</li>
 		</ol>
-		<img src="images/guardragon.png" width="200px" alt="hoje não"/>
-        <img src="images/c2.jpg" width="200px" alt="hoje não"/>
+        <img src="img/c2.jpg" width="200px" alt="hoje não"/>
+        <img src="img/saber.jpg" width="200px" alt="hoje não"/>
 	</article>
 	<aside>
 		Tutorial
-		<img src="images/gakkou gurashi.jpg" width="200px" alt="hoje não"/>
-        <img src="images/furry.jpg" width="200px" alt="hoje não"/>
+		<img src="img/souryuu.jpg" width="200px" alt="hoje não"/>
+        <img src="img/furry.jpg" width="200px" alt="hoje não"/>
 	</aside>       
 	<section>
 		<div id="conteudo">    
-            <img id="stargrail" src="images/gochumon.png" alt="hoje não"/>
-            <br/>
-                  <label style="width: 200px" for="uname"><b>Username</b></label>
-                  <input style="width: 200px" type="text" placeholder="Enter Username" name="uname" required>
-                  <label style="width: 200px" for="psw"><b>Password</b></label>
-                  <input style="width: 200px" type="password" placeholder="Enter Password" name="psw" required>
-                  <button style="width: 200px" type="submit">Login</button>
-                  <label>
-                    <input type="checkbox" checked="checked" name="remember"> Lembrar
-                  </label> 
-            
+            <img id="stargrail" src="img/naruto.jpg" alt="hoje não" style="width: 820px"/>            
 		</div>   
         coe
 	</section>
