--- a/javascript.html
+++ b/javascript.html
@@ -4,9 +4,9 @@
 
 <head>
 	<meta charset="utf-8"/>
-	<link rel="stylesheet" href="css/php.css" media="all">
+	<link rel="stylesheet" href="css/javascript.css" media="all">
 	<link rel="icon" href="favicon.png">
-	<title>|| Projeto X || Início</title>
+	<title>|| Projeto X || Javascript</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
 	<h1><div><span style="color:#ff0000;">P</span><span style="color:#ff4000;">r</span><span style="color:#ff7f00;">o</span><span style="color:#ffff00;">j</span><span style="color:#80ff00;">e</span><span style="color:#00ff00;">t</span><span style="color:#00ffff;">o</span><span style="color:#0080ff;"> </span><span style="color:#0000ff;">X</span></div></h1>
 	<nav id="menu">
 		<ul>
-            <li><a href="index.html">Início</a></li>
+            <li><a href="home.html">Início</a></li>
             <li><a href="android.html">Android</a></li>
             <li class="dropdown">
                 <a href="javascript:void(0)" class="dropbtn">Web Dev</a>
@@ -23,16 +23,12 @@
                     <a href="javascript.html">JavaScript</a>
                     <a href="php.html">PHP</a>
                     <a href="bootstrap.html">Bootstrap</a>
-                    <a href="#">AngularJS</a>
+                    <a href="angularjs.html">AngularJS</a>
                     <a href="https://www.asp.net/">ASP.NET</a>
                     <a href="boilerplate.html">ASP.NET Boilerplate</a>
                 </div>
             </li>
-            <li><a href="fun.html">Fun</a></li>
-            <li><a href="tabelas.html">Tabelas</a></li>
-            <li><a href="contato.html">Contato</a></li>
-            <li><a href="modal.html">Modal</a></li>
-            <li><a href="vip.html">VIP</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
 		</ul>
 	</nav>
 	</header>
@@ -45,18 +41,18 @@
 			<li>Item4</li>
 			<li>Item5</li>
 		</ol>
-		<img src="images/guardragon.png" width="200px" alt="hoje não"/>
-        <img src="images/c2.jpg" width="200px" alt="hoje não"/>
+		<img src="img/guardragon.png" width="200px" alt="hoje não"/>
+        <img src="img/c2.jpg" width="200px" alt="hoje não"/>
 	</article>
 	<aside>
 		Tutorial
-		<img src="images/gakkou gurashi.jpg" width="200px" alt="hoje não"/>
-        <img src="images/furry.jpg" width="200px" alt="hoje não"/>
+		<img src="img/gakkou gurashi.jpg" width="200px" alt="hoje não"/>
+        <img src="img/furry.jpg" width="200px" alt="hoje não"/>
 	</aside>
         
 	<section>
 		<div id="conteudo">  
-            <h2>Fonts</h2>
+            <h2>Javascript</h2>
 			<br />
             <a id="info" href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript/A_re-introduction_to_JavaScript">Tutorial de JS</a>
 			<br />
