--- a/index.html
+++ b/index.html
@@ -21,17 +21,15 @@
 	</header>
 	<article>
 		World Chalice related
-		<img src="img/c2.jpg" width="200px" alt="hoje não"/>
-		<img src="img/saber.jpg" width="200px" alt="hoje não"/>     
+		<img src="img/c2.jpg" width="200px" alt="hoje não"/>  
 	</article>
 	<aside>
 		Tutorial
 		<img src="img/souryuu.jpg" width="200px" alt="hoje não"/>
-        <img src="img/furry.jpg" width="200px" alt="hoje não"/>
 	</aside>       
 	<section ng-app="myApp" ng-controller="myCtrl">
 		<div id="conteudo">    
-            <img id="stargrail" src="img/emil_crossford.png" alt="hoje não" style="width: 820px"/>
+            <img id="stargrail" src="img/dropkick.jpg" alt="hoje não" style="width: 820px"/>
             <br/>
                   <label style="width: 200px" for="uname"><b>Usuário: </b></label>
                   <input ng-model="user" style="width: 200px" type="text" placeholder="Criatividade mandou um abraço" name="uname" required>
