--- a/sobre.html
+++ b/sobre.html
@@ -94,6 +94,8 @@
             <br/>    
             Repositórios de arquivos:
             <br/>    
+            <a id="info" href="https://catbox.moe/">Catbox</a>
+            <br/>
 			<a id="info" href=https://1drv.ms/f/s!AgpNyTXEGEt3gQ60aOr4CUhcArv_>OneDrive</a>
             <br/>
             <a id="info" href=https://my.pcloud.com/#>pCloud :: File Manager</a>
@@ -102,6 +104,8 @@
             <br/>    
             <br/>
             Ferramentas online:
+            <br/>
+            <a id="info" href="https://cloudconvert.com/">convert anything to anything - CloudConvert</a>
             <br/>
             <a id="info" href=http://icoconvert.com>ICO Convert - Create Icons From PNG & JPG img Online</a>
             <br/>   
